Se crearon las tablas para guardar el evento del botón de whatsapp
